Add createWorkspace
