# airbyte-server/src/main/java/io/airbyte/server/handlers/WorkspacesHandler.java
@@ -24,26 +24,85 @@
 
 package io.airbyte.server.handlers;
 
+import com.github.slugify.Slugify;
 import com.google.common.base.Strings;
 import io.airbyte.analytics.TrackingClientSingleton;
+import io.airbyte.api.model.ConnectionRead;
+import io.airbyte.api.model.DestinationRead;
 import io.airbyte.api.model.SlugRequestBody;
+import io.airbyte.api.model.SourceRead;
+import io.airbyte.api.model.WorkspaceCreate;
 import io.airbyte.api.model.WorkspaceIdRequestBody;
 import io.airbyte.api.model.WorkspaceRead;
 import io.airbyte.api.model.WorkspaceUpdate;
 import io.airbyte.config.StandardWorkspace;
 import io.airbyte.config.persistence.ConfigNotFoundException;
 import io.airbyte.config.persistence.ConfigRepository;
-import io.airbyte.config.persistence.PersistenceConstants;
+import io.airbyte.server.errors.KnownException;
 import io.airbyte.validation.json.JsonValidationException;
 import java.io.IOException;
 import java.util.UUID;
+import javax.ws.rs.NotFoundException;
+import org.eclipse.jetty.http.HttpStatus;
 
 public class WorkspacesHandler {
 
   private final ConfigRepository configRepository;
+  private final ConnectionsHandler connectionsHandler;
+  private final DestinationHandler destinationHandler;
+  private final SourceHandler sourceHandler;
+  private final Slugify slugify;
 
-  public WorkspacesHandler(final ConfigRepository configRepository) {
+  public WorkspacesHandler(final ConfigRepository configRepository,
+                           final ConnectionsHandler connectionsHandler,
+                           final DestinationHandler destinationHandler,
+                           final SourceHandler sourceHandler) {
     this.configRepository = configRepository;
+    this.connectionsHandler = connectionsHandler;
+    this.destinationHandler = destinationHandler;
+    this.sourceHandler = sourceHandler;
+    this.slugify = new Slugify();
+  }
+
+  public WorkspaceRead createWorkspace(final WorkspaceCreate workspaceCreate)
+      throws JsonValidationException, IOException, ConfigNotFoundException, KnownException {
+
+    final String email = workspaceCreate.getEmail();
+    final Boolean initialSetupComplete = workspaceCreate.getInitialSetupComplete();
+    final Boolean anonymousDataCollection = workspaceCreate.getAnonymousDataCollection();
+    final Boolean news = workspaceCreate.getNews();
+    final Boolean securityUpdates = workspaceCreate.getSecurityUpdates();
+    final Boolean displaySetupWizard = workspaceCreate.getDisplaySetupWizard();
+
+    final StandardWorkspace workspace = new StandardWorkspace()
+        .withWorkspaceId(UUID.randomUUID())
+        .withCustomerId(UUID.randomUUID())
+        .withName(workspaceCreate.getName())
+        .withSlug(slugify.slugify(workspaceCreate.getName()))
+        .withInitialSetupComplete(initialSetupComplete != null ? initialSetupComplete : false)
+        .withAnonymousDataCollection(anonymousDataCollection != null ? anonymousDataCollection : false)
+        .withNews(news != null ? news : false)
+        .withSecurityUpdates(securityUpdates != null ? securityUpdates : false)
+        .withDisplaySetupWizard(displaySetupWizard != null ? displaySetupWizard : false)
+        .withTombstone(false);
+
+    if (!Strings.isNullOrEmpty(email)) {
+      workspace.withEmail(email);
+    }
+
+    try {
+      if (getWorkspaceBySlug(workspace.getSlug()) != null) {
+        throw new KnownException(HttpStatus.CONFLICT_409, "A workspace already exists with the same name");
+      }
+    } catch (NotFoundException e) {
+      // if the workspace does not exist, we can create a new one
+    }
+
+    configRepository.writeStandardWorkspace(workspace);
+
+    return buildWorkspaceRead(workspace);
+  }
+
   }
 
   public WorkspaceRead getWorkspace(WorkspaceIdRequestBody workspaceIdRequestBody)
@@ -65,6 +124,7 @@ public class WorkspacesHandler {
     if (!Strings.isNullOrEmpty(workspaceUpdate.getEmail())) {
       persistedWorkspace.withEmail(workspaceUpdate.getEmail());
     }
+
     persistedWorkspace
         .withInitialSetupComplete(workspaceUpdate.getInitialSetupComplete())
         .withDisplaySetupWizard(workspaceUpdate.getDisplaySetupWizard())
@@ -82,7 +142,11 @@ public class WorkspacesHandler {
 
   private WorkspaceRead buildWorkspaceReadFromId(UUID workspaceId) throws ConfigNotFoundException, IOException, JsonValidationException {
     final StandardWorkspace workspace = configRepository.getStandardWorkspace(workspaceId);
+    return buildWorkspaceRead(workspace);
+  }
 
+  private WorkspaceRead buildWorkspaceRead(StandardWorkspace workspace)
+      throws ConfigNotFoundException, IOException, JsonValidationException {
     return new WorkspaceRead()
         .workspaceId(workspace.getWorkspaceId())
         .customerId(workspace.getCustomerId())
